Fixed Docker images to know create the crafter user at the beginning and thus reduce image size

--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -38,29 +38,35 @@ WORKDIR /opt/crafter
 # Create volumes
 VOLUME [ "./data", "./logs", "./temp" ]
 
+# Add the Crafter user
+RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
+    chown -R crafter:crafter .; \
+    chown -R crafter:crafter /usr/local/tomcat
+
 # Copy bin folder
-COPY ./bin ./bin/
+COPY --chown=crafter:crafter ./bin ./bin/
 
 # Make the Grapes dir a volume
 VOLUME ./bin/grapes
 
 # Delete the bin/dbms dir
-RUN rm -rf ./bin/dbms
 # Delete the apache tomcat folder, we're going to link to the image's own Tomcat
-RUN rm -rf ./bin/apache-tomcat && ln -s /usr/local/tomcat ./bin/apache-tomcat
+# Delete the conf and webapps
+RUN rm -rf ./bin/dbms; \
+    rm -rf ./bin/apache-tomcat; \
+    gosu crafter ln -s /usr/local/tomcat ./bin/apache-tomcat; \
+    rm -rf ./bin/apache-tomcat/conf/* && rm -rf ./bin/apache-tomcat/webapps/*
 
-# Copy Tomcat setenv.sh, config and webapps
-RUN rm -rf ./bin/apache-tomcat/conf/* && rm -rf ./bin/apache-tomcat/webapps/*
-COPY ./bin/apache-tomcat/bin/setenv.sh ./bin/apache-tomcat/bin/
-COPY ./bin/apache-tomcat/conf ./bin/apache-tomcat/conf/
-COPY ./bin/apache-tomcat/webapps ./bin/apache-tomcat/webapps/
-COPY ./bin/apache-tomcat/shared ./bin/apache-tomcat/shared/
+# Copy Tomcat setenv.sh, config, shared and webapps
+COPY --chown=crafter:crafter ./bin/apache-tomcat/bin/setenv.sh ./bin/apache-tomcat/bin/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/conf ./bin/apache-tomcat/conf/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/webapps ./bin/apache-tomcat/webapps/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/shared ./bin/apache-tomcat/shared/
 
 # Remove CATALINA_HOME from crafter-setenv.sh
-RUN sed -i '/export CATALINA_HOME=$CRAFTER_BIN_DIR\/apache-tomcat/d' ./bin/crafter-setenv.sh
-
 # Replace ports for default ones
-RUN sed -i 's/8694/8983/g' ./bin/crafter-setenv.sh; \
+RUN sed -i '/export CATALINA_HOME=$CRAFTER_BIN_DIR\/apache-tomcat/d' ./bin/crafter-setenv.sh; \
+    sed -i 's/8694/8983/g' ./bin/crafter-setenv.sh; \
     sed -i 's/9201/9200/g' ./bin/crafter-setenv.sh; \
     sed -i 's/27020/27017/g' ./bin/crafter-setenv.sh; \
     sed -i 's/33306/3306/g' ./bin/crafter-setenv.sh;
@@ -69,10 +75,8 @@ RUN sed -i 's/8694/8983/g' ./bin/crafter-setenv.sh; \
 COPY ./docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
 
-# Add the Crafter user
-RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
-    chown -R crafter:crafter .; \
-    chown -R crafter:crafter /usr/local/tomcat
+# Expose debug port
+EXPOSE 8000
 
 # Entrypoint and command (run by default)
 ENTRYPOINT [ "./docker-entrypoint.sh" ]
