--- a/images/profile/Dockerfile
+++ b/images/profile/Dockerfile
@@ -32,24 +32,29 @@ WORKDIR /opt/crafter
 # Create volumes
 VOLUME [ "./logs", "./temp" ]
 
+# Add the Crafter user
+RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
+    chown -R crafter:crafter .; \
+    chown -R crafter:crafter /usr/local/tomcat
+
 # Link ./bin/apache-tomcat to the image's own Tomcat
-RUN ln -s /usr/local/tomcat ./bin/apache-tomcat
+# Delete the conf and webapps
+RUN gosu crafter ln -s /usr/local/tomcat ./bin/apache-tomcat; \
+    rm -rf ./bin/apache-tomcat/conf/* && rm -rf ./bin/apache-tomcat/webapps/*
 
 # Copy version.txt, crafter-setenv.sh, Tomcat setenv.sh, config, shared and profile webapps
-RUN rm -rf ./bin/apache-tomcat/conf/* && rm -rf ./bin/apache-tomcat/webapps/*
-COPY ./bin/version.txt ./bin/
-COPY ./bin/crafter-setenv.sh ./bin/
-COPY ./bin/apache-tomcat/bin/setenv.sh ./bin/apache-tomcat/bin/
-COPY ./bin/apache-tomcat/conf ./bin/apache-tomcat/conf/
-COPY ./bin/apache-tomcat/webapps/crafter-profile.war ./bin/apache-tomcat/webapps/
-COPY ./bin/apache-tomcat/webapps/crafter-profile-admin.war ./bin/apache-tomcat/webapps/
-COPY ./bin/apache-tomcat/shared/classes/crafter/profile ./bin/apache-tomcat/shared/classes/crafter/profile/
+COPY --chown=crafter:crafter ./bin/version.txt ./bin/
+COPY --chown=crafter:crafter ./bin/crafter-setenv.sh ./bin/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/bin/setenv.sh ./bin/apache-tomcat/bin/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/conf ./bin/apache-tomcat/conf/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/webapps/crafter-profile.war ./bin/apache-tomcat/webapps/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/webapps/crafter-profile-admin.war ./bin/apache-tomcat/webapps/
+COPY --chown=crafter:crafter ./bin/apache-tomcat/shared/classes/crafter/profile ./bin/apache-tomcat/shared/classes/crafter/profile/
 
 # Remove CATALINA_HOME from crafter-setenv.sh
-RUN sed -i '/export CATALINA_HOME=$CRAFTER_BIN_DIR\/apache-tomcat/d' ./bin/crafter-setenv.sh
-
 # Replace ports for default ones
-RUN sed -i 's/8695/8983/g' ./bin/crafter-setenv.sh; \
+RUN sed -i '/export CATALINA_HOME=$CRAFTER_BIN_DIR\/apache-tomcat/d' ./bin/crafter-setenv.sh; \
+    sed -i 's/8695/8983/g' ./bin/crafter-setenv.sh; \
     sed -i 's/9202/9200/g' ./bin/crafter-setenv.sh; \
     sed -i 's/9192/9191/g' ./bin/crafter-setenv.sh; \
     sed -i 's/28020/27017/g' ./bin/crafter-setenv.sh; \
@@ -61,11 +66,6 @@ RUN sed -i 's/8695/8983/g' ./bin/crafter-setenv.sh; \
 # Copy entrypoint script and make it executable
 COPY ./docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
-
-# Add the Crafter user
-RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
-    chown -R crafter:crafter .; \
-    chown -R crafter:crafter /usr/local/tomcat
 
 # Entrypoint and command (run by default)
 ENTRYPOINT [ "./docker-entrypoint.sh" ]
