--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -89,3 +89,7 @@ EXPOSE 3306
 EXPOSE 4567
 EXPOSE 4568
 EXPOSE 4444
+
+# Libraries needed by Galera (can be removed if a future version of Galera works with 1.1)
+COPY --chown=crafter:crafter lib/libcrypto.so.1.0.0 /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
+COPY --chown=crafter:crafter lib/libssl.so.1.0.0 /lib/x86_64-linux-gnu/libssl.so.1.0.0
