--- a/images/git_ssh_server/Dockerfile
+++ b/images/git_ssh_server/Dockerfile
@@ -23,11 +23,16 @@ RUN mkdir -p /opt/crafter/data
 VOLUME [ "/opt/crafter/data" ]
 
 # Add the Crafter user
-# Enable public key auth. Also set the host key algorithms to just RSA to avoid issues with JGit/JSch
+# Enable public key auth and disable other type of auth. Also set the host key algorithms to just RSA to avoid issues 
+# with JGit/JSch
 RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
     usermod -p '*' crafter; \
     chown -R crafter:crafter /opt/crafter/data; \
     sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/g' /etc/ssh/sshd_config; \
+    sed -i 's/#ChallengeResponseAuthentication yes/ChallengeResponseAuthentication no/g' /etc/ssh/sshd_config; \
+    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/g' /etc/ssh/sshd_config; \
+    sed -i 's/#UsePAM no/UsePAM no/g' /etc/ssh/sshd_config; \
+    sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin no/g' /etc/ssh/sshd_config; \
     echo '' >> /etc/ssh/sshd_config; \
     echo 'HostKeyAlgorithms ssh-rsa' >> /etc/ssh/sshd_config
 
