--- a/images/git_ssh_server/Dockerfile
+++ b/images/git_ssh_server/Dockerfile
@@ -22,19 +22,24 @@ RUN mkdir -p /opt/crafter/data
 # Create volumes
 VOLUME [ "/opt/crafter/data" ]
 
-# Add the Crafter user
-# Enable public key auth and disable other type of auth. Also set the host key algorithms to just RSA to avoid issues 
-# with JGit/JSch
+# - Add the Crafter user
+# - Make git-shell the default shell of the crafter user
+# - Enable public key auth and disable other type of auth. Also set the host key algorithms to just RSA to avoid issues 
+#   with JGit/JSch
 RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
     usermod -p '*' crafter; \
+    usermod -s $(command -v git-shell) crafter; \
     chown -R crafter:crafter /opt/crafter/data; \
     sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/g' /etc/ssh/sshd_config; \
     sed -i 's/#ChallengeResponseAuthentication yes/ChallengeResponseAuthentication no/g' /etc/ssh/sshd_config; \
     sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/g' /etc/ssh/sshd_config; \
-    sed -i 's/#UsePAM no/UsePAM no/g' /etc/ssh/sshd_config; \
     sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin no/g' /etc/ssh/sshd_config; \
     echo '' >> /etc/ssh/sshd_config; \
     echo 'HostKeyAlgorithms ssh-rsa' >> /etc/ssh/sshd_config
+
+# Copy no-interactive-login file to the crafter's user home and make it executable
+COPY --chown=crafter:crafter no-interactive-login /home/crafter/git-shell-commands/no-interactive-login
+RUN chmod +x /home/crafter/git-shell-commands/no-interactive-login
 
 # Copy entrypoint script and make it executable
 COPY docker-entrypoint.sh .
