--- a/images/git_ssh_server/Dockerfile
+++ b/images/git_ssh_server/Dockerfile
@@ -24,12 +24,14 @@ VOLUME [ "/opt/crafter/data" ]
 
 # - Add the Crafter user
 # - Make git-shell the default shell of the crafter user
+# - Remove root default shell access
 # - Enable public key auth and disable other type of auth. Also set the host key algorithms to just RSA to avoid issues 
 #   with JGit/JSch
 RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
     usermod -p '*' crafter; \
-    usermod -s $(command -v git-shell) crafter; \
     chown -R crafter:crafter /opt/crafter/data; \
+    usermod -s $(command -v git-shell) crafter; \
+    usermod -s /sbin/nologin root; \
     sed -i 's/#PubkeyAuthentication yes/PubkeyAuthentication yes/g' /etc/ssh/sshd_config; \
     sed -i 's/#ChallengeResponseAuthentication yes/ChallengeResponseAuthentication no/g' /etc/ssh/sshd_config; \
     sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/g' /etc/ssh/sshd_config; \
