--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -100,3 +100,10 @@ EXPOSE 5701
 # Libraries needed by Galera (can be removed if a future version of Galera works with 1.1)
 COPY --chown=crafter:crafter lib/libcrypto.so.1.0.0 /lib/x86_64-linux-gnu/libcrypto.so.1.0.0
 COPY --chown=crafter:crafter lib/libssl.so.1.0.0 /lib/x86_64-linux-gnu/libssl.so.1.0.0
+
+FROM enterprise as imagemagick
+
+RUN set -eux; \
+    apt-get update; \
+    apt-get install -y --no-install-recommends imagemagick; \
+    rm -rf /var/lib/apt/lists/*;
