Fix for Git HTTPS Server image

--- a/images/git_https_server/conf/extra/httpd-vhosts.conf
+++ b/images/git_https_server/conf/extra/httpd-vhosts.conf
@@ -43,7 +43,7 @@
 
     SetEnv GIT_PROJECT_ROOT ${GIT_REPOS_ROOT}
     SetEnv GIT_HTTP_EXPORT_ALL
-    ScriptAlias /git/ /usr/libexec/git-core/git-http-backend/
+    ScriptAlias /repos/ /usr/libexec/git-core/git-http-backend/
 
     <Directory /usr/libexec/git-core>
         Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
